--- a/src/pageStyle.css
+++ b/src/pageStyle.css
@@ -137,7 +137,7 @@
 
 @media (min-width: 1200px) {
   .container {
-    width: 1140px;
+    width: calc(100% - 30px);
     display: flex;
     flex-direction: row;
   }
@@ -158,8 +158,8 @@
     width: calc(50% - 20px);
   }
   .map-container {
-    width: 80%;
+    width: 100%;
     height: 100%;
-    margin-top: 0;
+    margin-top: 150px;
   }
 }
